--- a/hitapp/dev/index.html
+++ b/hitapp/dev/index.html
@@ -87,23 +87,23 @@
       content=app
     >
     <title>哈工大电梯实时人数</title>
-    <script async type="module" crossorigin src="/js/main-89e27f51.js"></script>
-    <link rel="modulepreload" crossorigin href="/js/object-assign-b33fa8b7.js">
-    <link rel="modulepreload" crossorigin href="/js/hoist-non-react-statics-f84d2b88.js">
-    <link rel="modulepreload" crossorigin href="/js/react-e8886b06.js">
-    <link rel="modulepreload" crossorigin href="/js/scheduler-12376d7f.js">
-    <link rel="modulepreload" crossorigin href="/js/react-dom-4d145aa7.js">
-    <link rel="modulepreload" crossorigin href="/js/react-redux-28064587.js">
-    <link rel="modulepreload" crossorigin href="/js/@babel-531ed693.js">
-    <link rel="modulepreload" crossorigin href="/js/redux-5ef48740.js">
-    <link rel="modulepreload" crossorigin href="/js/redux-thunk-ef899f4c.js">
-    <link rel="modulepreload" crossorigin href="/js/react-is-a192e302.js">
-    <link rel="modulepreload" crossorigin href="/js/clsx-1229b3e0.js">
-    <link rel="modulepreload" crossorigin href="/js/stylis-79144faa.js">
-    <link rel="modulepreload" crossorigin href="/js/@emotion-afdb9580.js">
-    <link rel="modulepreload" crossorigin href="/js/react-transition-group-b4c1b803.js">
-    <link rel="modulepreload" crossorigin href="/js/@mui-119afba8.js">
-    <link rel="stylesheet" href="/css/index-28d00a8b.css">
+    <script async type="module" crossorigin src="./js/main-89e27f51.js"></script>
+    <link rel="modulepreload" crossorigin href="./js/object-assign-b33fa8b7.js">
+    <link rel="modulepreload" crossorigin href="./js/hoist-non-react-statics-f84d2b88.js">
+    <link rel="modulepreload" crossorigin href="./js/react-e8886b06.js">
+    <link rel="modulepreload" crossorigin href="./js/scheduler-12376d7f.js">
+    <link rel="modulepreload" crossorigin href="./js/react-dom-4d145aa7.js">
+    <link rel="modulepreload" crossorigin href="./js/react-redux-28064587.js">
+    <link rel="modulepreload" crossorigin href="./js/@babel-531ed693.js">
+    <link rel="modulepreload" crossorigin href="./js/redux-5ef48740.js">
+    <link rel="modulepreload" crossorigin href="./js/redux-thunk-ef899f4c.js">
+    <link rel="modulepreload" crossorigin href="./js/react-is-a192e302.js">
+    <link rel="modulepreload" crossorigin href="./js/clsx-1229b3e0.js">
+    <link rel="modulepreload" crossorigin href="./js/stylis-79144faa.js">
+    <link rel="modulepreload" crossorigin href="./js/@emotion-afdb9580.js">
+    <link rel="modulepreload" crossorigin href="./js/react-transition-group-b4c1b803.js">
+    <link rel="modulepreload" crossorigin href="./js/@mui-119afba8.js">
+    <link rel="stylesheet" href="./css/index-28d00a8b.css">
   </head>
 
   <body><noscript>
